created basic authentication and security services

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,8 @@ PG_HOST="localhost"
 PG_PORT=5432
 PG_DATABASE="petup"
 
-JWT_SECRET="someverylongsupersecuresecretkey"
+JWT_SECRET="someverylongsupersecuresecretkeyupdatedforbettersecurity"
 JWT_EXPIRATION=86400000
+
+ADMIN_EMAIL="admin@shetel.dev"
+ADMIN_PASSWORD="adminadmin"
